Omnibox UI Experiments: Steady State Elisions - Fix clear on ZeroSuggest

There's a bug where if the user double-clicks fast on a segment of the
elided URL, before the ZeroSuggest popup has a chance to popup, the
Omnibox will be cleared when the popup comes up.

This is because we were not properly updating the OmniboxEditModel's
user_text_ string when we unelided the URL. This CL fixes that.

Bug: 838545, 797354
Change-Id: I55f69cd912243494f55b5e00a45d94b1ea01a221
Reviewed-on: https://chromium-review.googlesource.com/1056387
Commit-Queue: Tommy Li <tommycli@chromium.org>
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Reviewed-by: Justin Donnelly <jdonnelly@chromium.org>
Cr-Commit-Position: refs/heads/master@{#558927}
Former-commit-id: b614de5808201edc2755712bc41848b4bc101adb